feat: documentation for api endpoints
